feat(app): dashboard
